--- a/tasks/installation.yml
+++ b/tasks/installation.yml
@@ -65,3 +65,5 @@
     dest: '{{ repo_mirror_base_path }}'
     src: '{{ repo_mirror_landingpage_clone_dir }}/dist/'
     remote_src: true
+    group: www-data
+    user: www-data
