(fix) only deploy the landing page when we are not in check mode

--- a/tasks/configuration.yml
+++ b/tasks/configuration.yml
@@ -171,6 +171,7 @@
     remote_src: true
     group: www-data
     owner: www-data
+  when: not ansible_check_mode
   tags:
     - 'role::repo_mirror'
     - 'role::repo_mirror:configuration'
