--- a/meta/main.yml
+++ b/meta/main.yml
@@ -24,9 +24,4 @@ collections:
   - community.general
   - adfinis.facts
 
-dependencies:
-  - name: robertdebock.bootstrap
-  # @TODO: Use the galaxy uri again once a new release has been created
-  - src: https://github.com/O1ahmad/ansible-role-systemd
-    version: master
-    scm: git
+dependencies: []
