--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -1,10 +1,7 @@
 ---
 dependency:
   name: galaxy
-lint: |
-  set -e
-  yamllint .
-  ansible-lint
+lint: set -e ; yamllint . ; ansible-lint
 driver:
   name: podman
 platforms:
