(feat) add optional zfs dataset management

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -25,6 +25,14 @@ repo_mirror_rsync_timeout: 30
 # The default directory to clone the landingpage repository to
 repo_mirror_landingpage_clone_dir: /opt/landingpage
 
+# if to manage/modify/touch zfs datasets, default false
+repo_mirror_zfs_managed: false
+
+# zfs datasets to manage, default set to none
+repo_mirror_zfs_datasets:
+  - name: "pkg/debian"
+    quota: "1000G"
+
 # the default max runtime for a sync job
 _default_systemd_unit_max_runtime_sec: 43200  # 12 hours
 
