--- a/tasks/configuration.yml
+++ b/tasks/configuration.yml
@@ -6,6 +6,16 @@
 - name: Populate service facts
   ansible.builtin.service_facts:
 
+- name: create zfs datasets
+  community.general.zfs:
+    name: '{{ item.name }}'
+    state: present
+    extra_zfs_properties:
+      quota: '{{ item.quota }}'
+      mountpoint: '{{ repo_mirror_base_path }}/{{ item.name | split("/")[1] }}'
+  with_items: "{{ repo_mirror_zfs_datasets }}"
+  when: repo_mirror_zfs_datasets is defined and repo_mirror_zfs_managed is true
+
 - name: Create sync dirs
   ansible.builtin.file:
     path: "{{ repo_mirror_base_path }}/{{ item.name }}"
