--- a/tasks/installation.yml
+++ b/tasks/installation.yml
@@ -92,7 +92,7 @@
 
 - name: Deploy landingpage
   ansible.builtin.copy:
-    dest: '{{ repo_mirror_www_path }} | '
+    dest: '{{ repo_mirror_www_path }}'
     src: '{{ repo_mirror_landingpage_clone_dir }}/dist/'
     mode: "0755"
     remote_src: true
