--- a/tasks/installation.yml
+++ b/tasks/installation.yml
@@ -91,13 +91,12 @@
     - 'role::repo_mirror:configuration:landingpage'
 
 - name: Deploy landingpage
-  ansible.builtin.copy:
-    dest: '{{ repo_mirror_www_path }}'
+  ansible.posix.synchronize:
+    dest: '{{ repo_mirror_www_path }}/'
     src: '{{ repo_mirror_landingpage_clone_dir }}/dist/'
-    mode: "0755"
-    group: www-data
-    owner: www-data
-    remote_src: true
+    group: true
+    owner: true
+  delegate_to: "{{ inventory_hostname }}"
   when: not ansible_check_mode
   tags:
     - 'role::repo_mirror'
