--- a/tasks/installation.yml
+++ b/tasks/installation.yml
@@ -50,7 +50,7 @@
     - 'role::repo_mirror:configuration'
     - 'role::repo_mirror:configuration:landingpage'
 
-- name: Clone landingpage repository
+- name: Clone landingpage repository  # noqa: latest[git]
   ansible.builtin.git:
     repo: https://github.com/adfinis/landingpage-repo_mirror
     dest: '{{ repo_mirror_landingpage_clone_dir }}'
@@ -64,6 +64,7 @@
   ansible.builtin.command:
     cmd: yarnpkg
     chdir: '{{ repo_mirror_landingpage_clone_dir }}'
+  changed_when: false
   tags:
     - 'role::repo_mirror'
     - 'role::repo_mirror:configuration'
@@ -73,6 +74,7 @@
   ansible.builtin.command:
     cmd: make prod
     chdir: '{{ repo_mirror_landingpage_clone_dir }}'
+  changed_when: false
   tags:
     - 'role::repo_mirror'
     - 'role::repo_mirror:configuration'
